ProdIND/ProdPrograms/force-app/main/default/objects/GeoCode_Co_ordinates_Range__mdt/GeoCode_Co_ordinates_Range__mdt.object-meta.xml
<CustomObject>
    <label>GeoCode Co-ordinates Range</label>
    <pluralLabel>GeoCode Co-ordinates Ranges</pluralLabel>
</CustomObject>