ProdIND/ProdPrograms/force-app/main/default/objects/GeoCode_Co_ordinates_Range__mdt/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>