ProdIND/ProdPrograms/force-app/main/default/objects/GeoCode_Co_ordinates_Range__mdt/fields/End_Range__c.field-meta.xml
<CustomField>
    <fullName>End_Range__c</fullName>
    <label>End Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>