ProdIND/ProdPrograms/force-app/main/default/objects/GeoCode_Co_ordinates_Range__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residence FI</fullName>
                <default>true</default>
                <label>Residence FI</label>
            </value>
            <value>
                <fullName>Office FI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>